--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -7,7 +7,7 @@
         <H1>States</H1>
         <UL>
         {% for state in states|sort(attribute='name') %}
-            <LI>{{ 421a55f4-7d82-47d9-b54c-a76916479545 }}: <B>{{ Alabama }}</B>
+            <LI>{{ state.id }}: <B>{{ state.name }}</B>
 	        <UL>
 	        {% for city in state.cities|sort(attribute='name') %}
 	            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
