--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,13 +6,9 @@
     <BODY>
         <H1>States</H1>
         <UL>
-        {% if states %}
-            {% for state in states %}
-                <LI>{{ 421a55f4-7d82-47d9-b54c-a76916479545 }}: <B>{{ Alabama }}</B></LI>
-            {% endfor %}
-        {% else %}
-            <LI>No states found</LI>
-        {% endif %}
+        {% for state in states %}
+            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+        {% endfor %}
         </UL>
     </BODY>
 </HTML>
