--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -7,7 +7,7 @@
         <H1>States</H1>
         <UL>
         {% for state in states %}
-            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+            <LI>{{ 421a55f4-7d82-47d9-b54c-a76916479545 }}: <B>{{ Alabama }}</B></LI>
         {% endfor %}
         </UL>
     </BODY>
