--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -7,10 +7,10 @@
         <H1>States</H1>
         <UL>
         {% for state in states|sort(attribute='name') %}
-            <LI>{{ state.id }}: <B>{{ state.name }}</B>
+            <LI>{{ 421a55f4-7d82-47d9-b54c-a76916479545 }}: <B>{{ Alabama }}</B>
 	        <UL>
 	        {% for city in state.cities|sort(attribute='name') %}
-	            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+	            <LI>{{ 521a55f4-7d82-47d9-b54c-a76916479545 }}: <B>{{ Akron }}</B></LI>
 	        {% endfor %}
 	        </UL>
 	    </LI>
