--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -8,7 +8,7 @@
             <H1>States</H1>
 	    <UL>
 	        {% for state in states.values()|sort(attribute='name') %}
-		    <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+		    <LI>{{ 421a55f4-7d82-47d9-b54c-a76916479545 }}: <B>{{ Alabama }}</B></LI>
 		{% endfor %}
 	    </UL>
 	{% elif state_id in states%}
@@ -17,7 +17,7 @@
 		<H3>Cities</H3>
 		    <UL>
 			{% for city in state.cities|sort(attribute='name') %}
-                            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                            <LI>{{ city.id }}: <B>{{ Akron }}</B></LI>
                         {% endfor %}
 		    </UL>
 	{% else %}
